# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-16 17:51:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17

    Summary:
      csv, fix coding style for the unit test file
    Revision:
      itools--main--0.12--patch-17

    Style fixes: columns of 80 characters maximum; use explicit imports (not
    "import *"); and remove/add some spaces.

    modified files:
     Changelog csv/test_itools_csv.py


2005-11-16 17:25:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-16

    Summary:
      csv, define class variable "row_class" to simplify specialization
    Revision:
      itools--main--0.12--patch-16

    So a sub-class may be:
    
      from itools.csv.itools_csv import Row, CSV
    
      class MyRow(Row):
        
          def max(self):
              return max(self)
    
    
      class MyCSV(CSV):
    
          class_row = MyRow

    modified files:
     Changelog csv/itools_csv.py


2005-11-16 17:07:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-15

    Summary:
      handlers, fix "save_state" (open the resource)
    Revision:
      itools--main--0.12--patch-15


    modified files:
     Changelog handlers/Handler.py


2005-11-16 12:33:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-14

    Summary:
      handlers, don't import old CSV handler
    Revision:
      itools--main--0.12--patch-14


    modified files:
     Changelog handlers/__init__.py


2005-11-16 12:32:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-13

    Summary:
      merge from piotr (csv)
    Revision:
      itools--main--0.12--patch-13

    Patches applied:
    
     * piotr@macuk.pl--public/itools--csv--0.12--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.12--patch-11
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-1
       Drop the get_all_rows method, the get_rows method is enhanced.
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-2