@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-16 17:58:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18
+
+    Summary:
+      csv, add broken test (to access columns by name)
+    Revision:
+      itools--main--0.12--patch-18
+
+
+    modified files:
+     Changelog csv/test_itools_csv.py
+
+
 2005-11-16 17:51:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17
 
     Summary:
